# www

./: .gitignore  2012-index.html  2014-index.html  2017-index.html  2017-index.txt  2018-index.txt  2019-index.html  2019-index.txt  2023-index.html  BidirectionalTypeChecking-stub.agda  BidirectionalTypeChecking.agda  JVM.agda  Makefile  README.md  cabal.haskell-ci  cabal.project  enhance_page.js  fix-acls.sh  include.html  index.txt  lp3-2015.txt  pandoc.css  push-file.sh  style.css
laborations/: JavaLabRunner.hs  Makefile  plt-run-java-lab.cabal
laborations/lab1/: Makefile  index.txt  lab1.txt
laborations/lab1/test/: conflict.cc.txt  synthetic002.cc  synthetic004.cc  synthetic008.cc  synthetic010.cc  synthetic015.cc  synthetic017.cc  synthetic019.cc  synthetic022.cc  synthetic026.cc
laborations/lab1/test/bad/: bad003.cc  bad005.cc  bad008.cc  bad015.cc  bad018.cc  bad019.cc  bad021.cc  bad023.cc  bad026.cc  bad027.cc  bad035.cc  bad042.cc  bad043.cc  bad053.cc  bad055.cc  bad056.cc  bad057.cc  bad058.cc  bad061.cc  bad062.cc  bad063.cc  bad065.cc  bad068.cc  bad069.cc  bad070.cc  bad073.cc  bad076.cc  bad080.cc  bad083.cc  bad084.cc  bad087.cc  bad091.cc  bad092.cc  bad100.cc  bad101.cc  bad108.cc  bad111.cc  bad120.cc  bad123.cc  bad125.cc  (+2 more)
laborations/lab1/testscript/: Makefile  Makefile-test  build-tarball.sh  index.txt  progs-test-lab1.hs
laborations/lab1/testsuite/: Makefile  Makefile-test  build-tarball.sh  index.txt  plt-test-lab1.cabal  plt-test-lab1.hs  progs-test-lab1.hs  stack.yaml
laborations/lab1/testsuite/bad/: bad001.cc  bad002.cc  bad004.cc  bad006.cc  bad009.cc  bad012.cc  bad013.cc  bad014.cc  bad016.cc  bad017.cc  bad020.cc  bad022.cc  bad024.cc  bad025.cc  bad028.cc  bad030.cc  bad031.cc  bad034.cc  bad037.cc  bad038.cc  bad040.cc  bad046.cc  bad047.cc  bad048.cc  (+43 more)
laborations/lab2/: CMM.cf  CPP.cf  Makefile  index.txt  lab2.txt
laborations/lab2/agda/: Main.hs  Makefile  Setup.hs  lab2.agda-lib  package.yaml
laborations/lab2/haskell/: Interpreter.hs  Makefile  Setup.hs  TypeChecker.hs  index.html  lab2.cabal  lab2.hs  test.mk
laborations/lab2/java/: CMM.cf  CPP.cf  Interpreter.java  Makefile  TypeChecker.java  lab2.hs  lab2.java  lab2.sh
laborations/lab2/java1.5/: Interpreter.java  Makefile  index.html  lab2  lab2.java
laborations/lab2/testsuite/: Makefile  Makefile-test  build-tarball.sh  index.txt  plt-test-lab2.cabal  plt-test-lab2.hs  prelude.cc  progs-test-lab2.hs  run-test-cabal.sh  run-test-stack.sh  stack.yaml
laborations/lab3/: Makefile  good03.cc  good03.j  index.txt  lab3.txt
laborations/lab3/haskell/: Annotated.hs  CPP.cf  Compiler.hs  Makefile  Runtime.java  TypeChecker.hs  lab3.cabal  lab3.hs  test.mk
laborations/lab3/java/: CPP.cf  Compiler.java  Makefile  TypeChecker.java  TypeException.java  cmm.cf  lab3.bat  lab3.java  lab3.sh
laborations/lab3/testsuite/: .gitignore  Makefile  Makefile-test  Runtime.java  build-good.sh  build-tarball.sh  index.txt  plt-test-lab3.cabal  plt-test-lab3.hs  prelude.cc  progs-test-lab3.hs  run-test-cabal.sh  run-test-stack.sh
laborations/lab4/: Fun.cf  Makefile  index.txt  lab4.txt
laborations/lab4/haskell/: .gitignore  Fun.cf  Interpreter.hs  Makefile  lab4.cabal  lab4.hs  test.mk
laborations/lab4/java/: .gitignore  Fun.cf  Interpreter.java  Makefile  lab4  lab4.bat  lab4.hs  lab4.java  lab4.sh
laborations/lab4/testsuite/: Makefile  Makefile-test  bad1.fun  bad2.fun  bad2.hs  bad3.fun  bad4.fun  bad4.hs  bad8.hs  build-tarball.sh  good1.fun  good1.hs  good2.fun  good3.fun  good3.hs  good4.fun  good5.fun  good5.hs  good6.fun  good7.fun  good8.fun  good9.hs  index.txt  plt-test-lab4.cabal  plt-test-lab4.hs  progs-test-lab4  progs-test-lab4.hs  progs-test-lab4.sh  run-test-cabal.sh  stack.yaml
laborations/mini/: Makefile  ex.mini  index.txt  mini.txt
laborations/mini/haskell/: .gitignore  AnnotatingTypeChecker.hs  Interpreter.hs  Makefile  index.txt
laborations/mini/java1.5/: AnnotCompiler.java  Interpreter.java  Makefile  annotcompilemini.java  compilemini  index.txt  runmini
laborations/mini/src/: Ann.cf  Code.cf  Makefile
laborations/mk/: test.mk
laborations/old-2015-mini/haskell/: Compiler.hs  compilemini.hs  compmini.hs  runmini.hs
laborations/old-2015-mini/java1.5/: .gitignore  AnnotatingTypeChecker.java  Compiler.java  TypeChecker.java  TypeException.java  runmini.java
laborations/old-2018-lab1/: Makefile  lab1.txt
laborations/old-2018-lab1/testsuite/: Makefile  Makefile-test  build-tarball.sh  progs-test-lab1.hs
labs/: Makefile  index.txt  plt-run-java-lab.cabal  stack.yaml
labs/lab1/: 2019-index.txt  Makefile  index.txt
labs/lab1/testsuite/: .gitignore  build-tarball.sh  cabal.project  plt-test-lab1.cabal  plt-test-lab1.hs  run-test-cabal.sh  run-test-ghc.sh  run-test-stack.sh
labs/lab2/: CMM.cf  index.txt
labs/lab2/agda/: Makefile  package.yaml
labs/lab2/haskell/: Setup.hs  TypeChecker.hs  lab2.cabal  lab2.hs
labs/lab2/java/: Interpreter.java  Makefile  lab2.bat  lab2.java  lab2.sh
labs/lab2/testsuite/: build-tarball.sh  plt-test-lab2.cabal  run-test-cabal.sh  run-test-ghc.sh  run-test-stack.sh
labs/lab3/: Makefile  good03.cc  index.txt
labs/lab3/haskell/: CMM.cf  Compiler.hs  lab3.cabal
labs/lab3/java/: Compiler.java  Makefile  lab3.sh
labs/lab3/testsuite/: Makefile-test  Runtime.java  build-tarball.sh  good  index.txt  plt-test-lab3.cabal  run-test-cabal.sh  run-test-ghc.sh  run-test-stack.sh
labs/lab4/: index.txt
labs/lab4/haskell/: Setup.hs  lab4.cabal  lab4.hs
labs/lab4/java/: Strategy.java  fun.cf  lab4.bat  lab4.java  lab4.sh
labs/lab4/testsuite/: .gitignore  build-tarball.sh  index.txt  plt-test-lab4.cabal  run-test-cabal.sh  run-test-ghc.sh  run-test-stack.sh
labs/mini/: Makefile
labs/mini/src/: MiniJS.cf
labs/mk/: test.mk
labs/old-2015-mini/: Mini.cf  Runtime.java  ex2.mini
labs/old-2015-mini/haskell/: AnnotCompiler.hs  TypeChecker.hs
labs/old-2015-mini/java1.5/: compilemini  compilemini.java  runmini
labs/old-2018-lab1/: Makefile
labs/old-2018-lab1/testsuite/: build-tarball.sh  index.txt
(+678 files in other folders)
