cabal-version:             2.2
name:                      plt-run-java-lab
version:                   0.0
author:                    Andreas Abel, Fabian Ruch and the PLT team.
copyright:                 (C) 2018-23 Andreas Abel and Fabian Ruch
license:                   NONE
                           -- All rights reserved.
synopsis:
  Runner for PLT lab solutions written in Java
description:
  Runner Programming Language Technology (Chalmers DAT151 / GU DIT231) lab solutions written in Java.

tested-with:
  GHC == 9.8.1 || ==9.6.3 || ==9.4.7 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5 || ==8.4.4

executable plt-run-java-lab
  main-is:                 JavaLabRunner.hs
  hs-source-dirs:          .

  default-language:        Haskell2010

  build-depends:
   -- Lower bounds set to versions shipped with GHC 8.4.4
    , base       >= 4.11.1.0 && < 5
    , filepath   >= 1.4.2    && < 1.5
    , process    >= 1.6.3.0  && < 1.7

  ghc-options:
    -Wall
    -Wcompat
