cabal-version:             2.4
name:                      plt-test-lab1
version:                   0.0
license:                   Unlicense

synopsis:
  Test suite for PLT lab1
description:
  Test suite for Programming Language Technology lab1 (Chalmers DAT151 / GU DIT231).

extra-source-files:
  bad/*.cc
  good/*.cc
  good-CMM/*.cc
  run-test-ghc.sh
  run-test-cabal.sh
  run-test-stack.sh
  stack.yaml

executable plt-test-lab1
  main-is:                 plt-test-lab1.hs
  hs-source-dirs:          .

  default-language:   Haskell2010

  build-depends:
      base       >= 4.9.1 && < 5
    , directory  >= 1.3.0 && < 1.4
    , filepath   >= 1.4.1 && < 1.5
    , process    >= 1.4.3 && < 1.7

  ghc-options:
    -Wall
    -Wcompat
