cabal-version:             2.4
name:                      plt-test-lab1
version:                   0.0
license:                   Unlicense

synopsis:
  Test suite for PLT lab1
description:
  Test suite for Programming Language Technology lab1 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC == 9.4.2 || ==9.2.4 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5 || ==8.8.4 || ==8.2.2 || ==8.0.2

extra-source-files:
  bad/*.cc
  good/*.cc
  good-CMM/*.cc
  run-test-ghc.sh
  run-test-cabal.sh
  run-test-stack.sh
  stack.yaml

executable plt-test-lab1
  main-is:                 plt-test-lab1.hs
  hs-source-dirs:          .

  default-language:   Haskell2010

  build-depends:
      base        >= 4.9.1  && < 5
    , directory   >= 1.3.0  && < 1.4
    , filepath    >= 1.4.1  && < 1.5
    , process     >= 1.4.3  && < 1.7

  -- These following tools are not needed to _build_ the testsuite runner,
  -- but to _run_ it, namely to build the parser from the given LBNF file.
  -- Putting them here means they need not be separately installed
  -- when invoking the runner with `cabal run` or `stack run`.

  build-tool-depends:
      BNFC:bnfc   >= 2.8.1  && < 2.10
    -- Not sure about the lower bounds, so we pick alex and happy versions
    -- that work at least with GHC 8.0.
    , alex:alex   >= 3.1.4  && < 3.3
    , happy:happy >= 1.19.5 && < 1.21

  ghc-options:
    -Wall
    -Wcompat
