cabal-version:        2.2
name:                 lab2
version:              0.1
author:               Andreas Abel and the PLT team.
copyright:            (C) 2022-23 Andreas Abel
license:              NONE
                      -- All rights reserved.
synopsis:
  Haskell stub for PLT lab2
description:
  Haskell stub for Programming Language Technology lab2 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC == 9.8.1 || ==9.6.3 || ==9.4.7 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5 || ==8.4.4

extra-source-files:
  CMM.cf
  Makefile

build-type: Custom
custom-setup
  setup-depends:
    , Cabal   >= 2.0   && < 4
        -- Distribution.Simple.BuildPaths.autogenPackageModulesDir is new in Cabal-2.0
    , base    >= 4.10  && < 5
        -- Restrict to GHC >= 8.2 which ships Cabal-2.0 (otherwise Cabal has to be reinstalled)
    , process
    -- Adding BNFC here does not help because that only provides the BNFC _library_,
    -- not the _executable that_ we call from 'Setup.hs'.
    -- , BNFC    >= 2.8.4 && < 2.10

executable lab2
  main-is:            lab2.hs
  hs-source-dirs:     .
  other-modules:
    Interpreter
    TypeChecker
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print
  autogen-modules:
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print

  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    TupleSections

  build-depends:
    , base       >= 4.9.1 && < 5
    , array      >= 0.5.1 && < 0.6
    , containers >= 0.5.7 && < 0.8
    , mtl        >= 2.2.2 && < 2.4

  ghc-options:
    -Wall
    -Wcompat

  build-tool-depends:
   -- The 'bnfc' executable is called from 'Setup.hs' only,
   -- but 'build-tool-depends' is not supported in the 'custom-setup' stanza.
   -- BNFC 2.8.4 dropped the 'Err' custom type in favor of the standard 'Either'.
    , BNFC:bnfc   >= 2.8.4  && < 2.10
   -- Not sure about the lower bounds, so we pick alex and happy versions
   -- that work at least with GHC 8.0.
    , alex:alex   >= 3.1.4  && < 3.5
    , happy:happy >= 1.19.5 && < 1.21
