cabal-version:             2.4
name:                      plt-test-lab2
version:                   0.0
license:                   Unlicense

synopsis:
  Test suite for PLT lab2
description:
  Test suite for Programming Language Technology lab2 (Chalmers DAT151 / GU DIT231).

extra-source-files:
  bad/*.cc
  bad-runtime/*.cc
  good/**/*.cc
  good/**/*.cc.input
  good/**/*.cc.output

executable plt-test-lab2
  main-is:                 plt-test-lab2.hs
  hs-source-dirs:          .

  default-language:   Haskell2010

  build-depends:
      base       >= 4.9.1 && < 5
    , directory  >= 1.3.0 && < 1.4
    , filepath   >= 1.4.1 && < 1.5
    , process    >= 1.4.3 && < 1.7

  ghc-options:
    -Wall
    -Wcompat

