cabal-version:        2.4
name:                 lab3
version:              0.0

extra-source-files:
  CMM.cf
  Makefile
  Runtime.java
  jasmin.jar

executable lab3
  main-is:            lab3.hs
  hs-source-dirs:     .
  other-modules:
    Annotated
    Compiler
    TypeChecker
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print

  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    GeneralizedNewtypeDeriving
    PatternSynonyms
    TupleSections

  build-depends:
      base       >= 4.9.1 && < 5
    , array      >= 0.5.1 && < 0.6
    , containers >= 0.5.7 && < 0.7
    , filepath   >= 1.4.1 && < 1.5
    , mtl        >= 2.2.2 && < 2.3
    , process    >= 1.4.3 && < 1.7

  ghc-options:
    -Wall
    -Wcompat
