cabal-version:        2.4
name:                 lab3
version:              0.0
author:               Andreas Abel and the PLT team.
copyright:            (C) 2022-23 Andreas Abel
license:              NONE
                      -- All rights reserved.

synopsis:
  Haskell stub for PLT lab3
description:
  Haskell stub for Programming Language Technology lab3 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC == 9.8.1 || ==9.6.3 || ==9.4.7 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5 || ==8.4.4

extra-source-files:
  CMM.cf
  Makefile
  Runtime.java
  jasmin.jar

executable lab3
  main-is:            lab3.hs
  hs-source-dirs:     .
  other-modules:
    Annotated
    Compiler
    TypeChecker
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print

  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    GeneralizedNewtypeDeriving
    PatternSynonyms
    TupleSections

  build-depends:
      base       >= 4.9.1 && < 5
    , array      >= 0.5.1 && < 0.6
    , containers >= 0.5.7 && < 0.8
    , filepath   >= 1.4.1 && < 1.5
    , mtl        >= 2.2.2 && < 2.4
    , process    >= 1.4.3 && < 1.7

  ghc-options:
    -Wall
    -Wcompat
