cabal-version:        2.4
name:                 lab4
version:              0.0

extra-source-files:
  Fun.cf
  Makefile

executable lab4
  main-is:            lab4.hs
  hs-source-dirs:     .
  other-modules:
    Interpreter
    Fun.Abs
    Fun.Lex
    Fun.Par
    Fun.Print

  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    TupleSections

  build-depends:
      base       >= 4.9.1 && < 5
    , array      >= 0.5.1 && < 0.6
    , containers >= 0.5.7 && < 0.7
    , mtl        >= 2.2.2 && < 2.3

  ghc-options:
    -Wall
    -Wcompat
