cabal-version:        2.4
name:                 lab4
version:              0.0
author:               Andreas Abel and the PLT team.
copyright:            (C) 2022-23 Andreas Abel
license:              NONE
                      -- All rights reserved.

synopsis:
  Haskell stub for PLT lab4
description:
  Haskell stub for Programming Language Technology lab4 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC == 9.8.1 || ==9.6.3 || ==9.4.7 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5 || ==8.4.4 || ==8.2.2 || ==8.0.2

extra-source-files:
  Fun.cf
  Makefile

executable lab4
  main-is:            lab4.hs
  hs-source-dirs:     .
  other-modules:
    Interpreter
    Fun.Abs
    Fun.Lex
    Fun.Par
    Fun.Print

  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    TupleSections

  ghc-options:
    -Wall
    -Wcompat

  build-depends:
      base       >= 4.9.1 && < 5
    , array      >= 0.5.1 && < 0.6
    , containers >= 0.5.7 && < 0.8
    , mtl        >= 2.2.2 && < 2.4
