cabal-version:             2.4
name:                      plt-test-lab4
version:                   0.0
author:                    Andreas Abel and the PLT team.
license:                   NONE
                           -- All rights reserved.

synopsis:
  Test suite for PLT lab4
description:
  Test suite for Programming Language Technology lab4 (Chalmers DAT151 / GU DIT231).

extra-source-files:
  bad/*.hs
  good/*.hs
  good/*.golden

executable plt-test-lab4
  main-is:                 plt-test-lab4.hs
  hs-source-dirs:          .

  default-language:   Haskell2010

  build-depends:
      base       >= 4.9.1 && < 5
    , directory  >= 1.3.0 && < 1.4
    , filepath   >= 1.4.1 && < 1.5
    , process    >= 1.4.3 && < 1.7

  ghc-options:
    -Wall
    -Wcompat

