cabal-version:             2.4
name:                      plt-test-lab1
version:                   0.0
author:                    Andreas Abel and the PLT team.
copyright:                 (C) 2022-23 Andreas Abel
license:                   NONE
                           -- All rights reserved.
synopsis:
  Test suite for PLT lab1
description:
  Test suite for Programming Language Technology lab1 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC == 9.8.1 || ==9.6.3 || ==9.4.7 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5 || ==8.4.4

extra-source-files:
  bad/*.cc
  good/*.cc
  good-CMM/*.cc
  run-test-ghc.sh
  run-test-cabal.sh
  run-test-stack.sh
  stack.yaml

executable plt-test-lab1
  main-is:                 plt-test-lab1.hs
  hs-source-dirs:          .

  default-language:        Haskell2010

  ghc-options:
    -Wall
    -Wcompat

  build-depends:
   -- Lower bounds set to versions shipped with GHC 8.4.4
    , base       >= 4.11.1.0 && < 5
    , directory  >= 1.3.1.5  && < 1.4
    , filepath   >= 1.4.2    && < 1.5
    , process    >= 1.6.3.0  && < 1.7

  -- These following tools are not needed to _build_ the testsuite runner,
  -- but to _run_ it, namely to build the parser from the given LBNF file.
  -- Putting them here means they need not be separately installed
  -- when invoking the runner with `cabal run` or `stack run`.

  build-tool-depends:
   -- BNFC 2.8.4 dropped the 'Err' custom type in favor of the standard 'Either'.
      BNFC:bnfc   >= 2.8.4  && < 2.10
   -- Not sure about the lower bounds, so we pick alex and happy versions
   -- that come in the last Stackage LTS (12.26) for GHC 8.4.4.
    , alex:alex   >= 3.2.4  && < 3.5
    , happy:happy >= 1.19.9 && < 1.21
