cabal-version: 2.4

-- Programming Language Technology (Chalmers DAT151 / GU DIT231)
-- (C) 2022-24 Andreas Abel
-- All rights reserved.

name:                 lab3
version:              0.1
author:               Andreas Abel and the PLT team.
copyright:            (C) 2022-24 Andreas Abel
license:              NONE
                      -- All rights reserved.
synopsis:
  Haskell stub for PLT lab3
description:
  Haskell stub for Programming Language Technology lab3 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC ==9.10.1 || ==9.8.2 || ==9.6.6 || ==9.4.8 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5

extra-source-files:
  CMM.cf
  Makefile
  Runtime.java
  jasmin.jar

build-type: Custom
custom-setup
  setup-depends:
    , Cabal   >= 2.0   && < 4
        -- Distribution.Simple.BuildPaths.autogenPackageModulesDir is new in Cabal-2.0
    , base    >= 4.10  && < 5
        -- Restrict to GHC >= 8.2 which ships Cabal-2.0 (otherwise Cabal has to be reinstalled)
    , process
    -- Adding BNFC here does not help because that only provides the BNFC _library_,
    -- not the _executable that_ we call from 'Setup.hs'.
    -- , BNFC    >= 2.8.4 && < 2.10

executable lab3
  main-is:            lab3.hs
  hs-source-dirs:     .
  other-modules:
    Annotated
    Compiler
    TypeChecker
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print
  autogen-modules:
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print

  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    GeneralizedNewtypeDeriving
    PatternSynonyms
    TupleSections

  build-depends:
   -- Lower bounds set to versions shipped with GHC 8.4.4
    , base       >= 4.11.1.0 && < 5
    , array      >= 0.5.2.0  && < 0.6
    , containers >= 0.5.11.0 && < 0.8
    , filepath   >= 1.4.2    && < 1.6
    , mtl        >= 2.2.2    && < 2.4
    , process    >= 1.6.3.0  && < 1.7

  ghc-options:
    -Wall
    -Wcompat

  build-tool-depends:
   -- The 'bnfc' executable is called from 'Setup.hs' only,
   -- but 'build-tool-depends' is not supported in the 'custom-setup' stanza,
   -- so we place it here.
   -- BNFC 2.8.4 dropped the 'Err' custom type in favor of the standard 'Either'.
    , BNFC:bnfc   >= 2.8.4  && < 2.10
   -- Not sure about the lower bounds, so we pick alex and happy versions
   -- that come in the last Stackage LTS (12.26) for GHC 8.4.4.
    , alex:alex   >= 3.2.4  && < 3.6
    , happy:happy >= 1.19.9 && < 2.2
